# relationship-candlestick-lab

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml  requirements.txt  start.bat  start.py  start.sh
config/: default_weights.yaml
examples/: sample_chat.csv  sample_chat.json  sample_chat.txt
frontend/: app.js  index.html  style.css
relationship_candlestick/: __init__.py  ai_scorer.py  api_scorer.py  charts.py  cli.py  indicators.py  ohlc.py  parser.py  pipeline.py  report.py  server.py  utils.py  volume.py
scripts/: README_pipeline.md  expand_turns.py  pipeline_turns.py  preprocess_turns.py  score_turns_api.py  score_turns_deepseek.py  score_turns_dispatch.py  wechat_to_standard.py
skill/: SKILL.md
tests/: _fixtures.py  conftest.py  test_calendar_mode.py  test_ohlc.py  test_parser.py  test_scoring_v2.py  test_scoring_v3.py  test_volume.py
